# odamex-alexmax

./: .hgignore  CMakeLists.txt  Makefile  odamex.workspace  odasrv.cfg
angelscript/: CMakeLists.txt
angelscript/include/: angelscript_c.h
angelscript/projects/gnuc/: makefile
angelscript/projects/trolltechqt/: angelscript.pro
angelscript/source/: as_c.cpp
client/: CMakeLists.txt
client/sdl/: client.cbp  client.depend  client.layout  hardware.cpp  i_input.cpp  i_main.cpp  i_music.cpp  i_sdlvideo.cpp  i_sound.cpp  i_system.cpp  og_interface.cpp  og_interface.h
client/src/: am_map.cpp  c_bind.cpp  c_cmds.cpp  c_console.cpp  cl_ctf.cpp  cl_ctf.h  cl_cvarlist.cpp  cl_demo.cpp  cl_demo.h  cl_main.cpp  cl_main.h  cl_netgraph.cpp  cl_netgraph.h  cl_pred.cpp  cl_stubs.cpp  d_main.cpp  d_net.cpp  d_netinfo.cpp  d_player.h  doomstat.cpp  doomstat.h  f_finale.cpp  f_wipe.cpp  g_game.cpp  g_level.cpp  g_warmup.cpp  gui_driver.cpp  gui_driver.h  gui_main.cpp  gui_main.h  hu_drawers.cpp  hu_elements.cpp  hu_elements.h  hu_minimenu.cpp  hu_minimenu.h  hu_stuff.cpp  hu_stuff.h  m_menu.cpp  m_misc.cpp  m_options.cpp  (+37 more)
common/: actor.h  as_globals.cpp  as_globals.h  as_main.cpp  as_main.h  as_stdstring.cpp  as_stdstring.h  c_cvarlist.cpp  c_cvars.cpp  c_dispatch.cpp  c_dispatch.h  c_level.cpp  cmdlib.cpp  cmdlib.h  d_dehacked.cpp  d_event.h  d_items.cpp  d_protocol.cpp  dobject.cpp  doomdef.h  dsectoreffect.cpp  dstrings.cpp  dthinker.cpp  farchive.cpp  g_level.h  g_warmup.h  gametype.cpp  gametype.h  gi.cpp  huffman.cpp  i_net.cpp  i_net.h  info.cpp  info.h  l_ccmd.cpp  l_ccmd.h  l_console.cpp  l_console.h  l_core.cpp  l_core.h  (+62 more)
jim/: jim-config.h.in  jim-win32compat.c  jimautoconf.h.in  load-static-exts.c
master/: CMakeLists.txt
odalaunch/: CMakeLists.txt
odalaunch/src/: dlg_main.cpp  misc.cpp  net_io.cpp  net_io.h  net_packet.cpp  net_packet.h
server/: CMakeLists.txt
server/src/: c_console.cpp  d_main.cpp  d_player.h  g_game.cpp  g_level.cpp  g_warmup.cpp  p_interaction.cpp  p_mobj.cpp  p_tick.cpp  p_user.cpp  s_sound.h  sv_banlist.cpp  sv_banlist.h  sv_ctf.cpp  sv_ctf.h  sv_cvarlist.cpp  sv_main.cpp  sv_main.h  sv_master.cpp  sv_rproto.cpp  v_font.h
server/win32/: server.cbp
wad/: wadinfo.txt
wad/lumps/: sndinfo.lmp
